[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Tools/Starter_drill1.png" type="Texture" id=1]
[ext_resource path="res://Drill.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 36.2567

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 37 )

[sub_resource type="AnimationNodeBlendSpace2D" id=37]
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "Idle_Drill_Left"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "Idle_Drill_Down"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "Idle_Drill_Right"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "Idle_Drill_Up"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
resource_local_to_scene = true
auto_triangles = false
blend_point_0/node = SubResource( 40 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 41 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 42 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 43 )
blend_point_3/pos = Vector2( 0, -1 )
triangles = PoolIntArray( 0, 1, 3, 1, 2, 3 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachine" id=20]
states/Drilling/node = SubResource( 37 )
states/Drilling/position = Vector2( 373, 70 )
states/IdleDrill/node = SubResource( 19 )
states/IdleDrill/position = Vector2( 182, 70 )
transitions = [ "IdleDrill", "Drilling", SubResource( 38 ), "Drilling", "IdleDrill", SubResource( 39 ) ]
start_node = "IdleDrill"
graph_offset = Vector2( -205, 12 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MiningDrill:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MiningDrill:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, -45 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MiningDrill:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, -19 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D:z_index")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -1 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MiningDrill/StaticBody2D/DrillHead:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -57.5, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MiningDrill/StaticBody2D/DrillHead:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("MiningDrill:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("MiningDrill/StaticBody2D:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7.5, 55 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("MiningDrill/StaticBody2D:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath(".:z_index")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("DrillEnd:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -35, -21 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "drill-down"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MiningDrill:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MiningDrill:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MiningDrill/StaticBody2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -7.5, 55 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MiningDrill/StaticBody2D:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MiningDrill:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "drill-left"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MiningDrill:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MiningDrill:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -19 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MiningDrill/StaticBody2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -57.5, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MiningDrill/StaticBody2D:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MiningDrill:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "drill-right"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MiningDrill:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MiningDrill:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -19 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MiningDrill/StaticBody2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 55, 2.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MiningDrill/StaticBody2D:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MiningDrill:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "drill-up"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MiningDrill:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MiningDrill:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -55 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -55 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MiningDrill/StaticBody2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -10, -57.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MiningDrill/StaticBody2D:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MiningDrill:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1 ]
}

[sub_resource type="Animation" id=25]
resource_name = "drilling-down"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MiningDrill:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 6, 10, 6, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MiningDrill:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 2, 15 ), Vector2( 13, 15 ), Vector2( 4, 15 ), Vector2( 13, 15 ), Vector2( 2, 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -2, 16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MiningDrill/StaticBody2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -7.5, 55 ), Vector2( -32.5, 55 ), Vector2( -10, 55 ), Vector2( -35, 55 ), Vector2( -5, 55 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MiningDrill/StaticBody2D:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MiningDrill:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("DrillEnd:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 52 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "drilling-left"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MiningDrill:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 8, 4, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 12, -55 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 90.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MiningDrill/StaticBody2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( -57.5, 1.52588e-05 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MiningDrill/StaticBody2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 90.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MiningDrill:z_index")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DrillEnd:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -33, 14 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "drilling-right"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MiningDrill:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 5, 9, 5, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MiningDrill/StaticBody2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 50, 1.52588e-05 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MiningDrill/StaticBody2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 3, -55 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MiningDrill/StaticBody2D/DrillHead:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MiningDrill/StaticBody2D/DrillHead:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MiningDrill:z_index")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("DrillEnd:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 35, 14 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "drilling-up"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MiningDrill:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 7, 11, 7, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MiningDrill:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 5, -55 ), Vector2( 1, -56 ), Vector2( 7, -55 ), Vector2( 1, -55 ), Vector2( 5, -55 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 2, -55 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MiningDrill/StaticBody2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -10, -55 ), Vector2( -1.19209e-06, -55 ), Vector2( -15, -57.5 ), Vector2( -3.8147e-06, -57.5 ), Vector2( -10, -57.5 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MiningDrill/StaticBody2D:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MiningDrill:z_index")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -1 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("DrillEnd:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, -89 ) ]
}

[node name="MiningDrill" type="Area2D" groups=["Tools"]]
collision_layer = 0
collision_mask = 3
script = ExtResource( 2 )

[node name="MiningDrill" type="Sprite" parent="."]
position = Vector2( 0, -20 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
hframes = 12

[node name="StaticBody2D" type="StaticBody2D" parent="MiningDrill"]
position = Vector2( -57.5, 0 )

[node name="DrillHead" type="CollisionShape2D" parent="MiningDrill/StaticBody2D" groups=["DrillHeads"]]
position = Vector2( -57.5, 0 )
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -19 )
rotation = 1.5708
z_index = -1
shape = SubResource( 2 )

[node name="DrillEnd" type="Position2D" parent="."]
position = Vector2( -35, -21 )

[node name="AnimationTree" type="AnimationTree" parent="." groups=["DrillHead"]]
tree_root = SubResource( 20 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )
parameters/Drilling/blend_position = Vector2( 0, 0 )
parameters/IdleDrill/blend_position = Vector2( 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RESET = SubResource( 3 )
anims/drill-down = SubResource( 4 )
anims/drill-left = SubResource( 5 )
anims/drill-right = SubResource( 6 )
anims/drill-up = SubResource( 7 )
anims/drilling-down = SubResource( 25 )
anims/drilling-left = SubResource( 26 )
anims/drilling-right = SubResource( 27 )
anims/drilling-up = SubResource( 28 )

[node name="MiningDrill_Sound" type="AudioStreamPlayer" parent="."]
